<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/List_Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrond_music1"
    android:orientation="vertical"
    tools:context="com.example.saeed.music_app.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:titleTextColor="#fcf9f9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:background="@color/primary_color"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#fcfafa"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Welcom"
                style="@style/CategoryStyle_welcom"
                android:layout_marginTop="10dp"
                android:background="@color/category_welcom"
                android:text="@string/category_welcom" />


            <TextView
                android:id="@+id/PlayList"
                style="@style/CategoryStyle"
                android:background="@color/category_playlist"
                android:text="@string/category_PlayList" />

            <TextView
                android:id="@+id/Albums"
                style="@style/CategoryStyle"
                android:background="@color/category_album"
                android:text="@string/category_Albums" />

            <TextView
                style="@style/CategoryStyle_welcom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@color/category_welcom"
                android:text="@string/category_paypal" />

            <Button

                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/paypal"
                android:onClick="payment"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#222"
                android:gravity="center"
                android:text="response"
                android:textColor="#f9f7f7"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

